Fix modal-dialog intercepting clicks
CSS fixes for the the `.modal-dialog` being too long and intercepting
clicks that should be triggering event handler on backdrop. Using
max-height and nested flexboxes rather than absolute positioning.

--- a/lib-less/_custom-bootstrap.less
+++ b/lib-less/_custom-bootstrap.less
@@ -592,18 +592,20 @@ input.form-control.dropdown-toggle[readonly], .dropdown-toggle {
   overflow: auto;
 
   .modal-dialog {
-    margin: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    display: flex;
+    flex-direction: column;
     overflow: auto;
 
+    /*
+      NB: Nested flex lets both .modal-content and .modal-dialog expand
+      to maximum intended height. If flexbox is unavailable, that's fine
+      since overflow: auto will just scroll the whole thing.
+    */
     .modal-content {
       display: flex;
       flex-direction: column;
-      max-height: 100%;
+      flex-grow: 1;
+      flex-shrink: 1;
       overflow: auto;
 
       > div {
@@ -621,9 +623,15 @@ input.form-control.dropdown-toggle[readonly], .dropdown-toggle {
 }
 
 @media screen and (max-width: @screen-xs-max) {
-  .modal .modal-dialog .modal-content {
-    border-radius: 0;
-    border: 0;
+  .modal .modal-dialog {
+    margin: 0;
+    height: 100%;
+
+    .modal-content {
+      border-radius: 0;
+      border: 0;
+      height: 100%;
+    }
   }
 }
 
@@ -632,15 +640,16 @@ input.form-control.dropdown-toggle[readonly], .dropdown-toggle {
   positioning above
 */
 @media screen and (min-width: @screen-sm-min) {
-  .modal.fade .modal-dialog {
-    transform: translate(-50%, -25%);
-  }
+  .modal .modal-dialog {
+    margin: @modal-margin auto 0;
 
-  .modal.in .modal-dialog, .modal .modal-dialog {
-    top: @modal-margin;
-    bottom: @modal-margin;
-    left: 50%;
-    transform: translate(-50%, 0%);
+    /*
+      Ideally, we'd like to define everything with percentages but vertical
+      margin and percentages doesn't really work because the CSS spec oddly
+      defines that margin percentages always be calculated as a percentage
+      of horizontal width, even for vertical margin.
+    */
+    max-height: calc(~"100% - "@modal-margin * 2);
   }
 }
 
